--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -138,6 +138,7 @@
     </style>
 
     <style name="FullScreenImageTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@color/black</item>
         <item name="android:navigationBarColor">@color/black</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowActionBar">true</item>
@@ -146,6 +147,7 @@
     </style>
 
     <style name="FullScreenMediaTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@color/black</item>
         <item name="android:navigationBarColor">@color/black</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowActionBar">true</item>
@@ -153,8 +155,8 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
-    <style name="FullScreenTextTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:navigationBarColor">@color/black</item>
+    <style name="FullScreenTextTheme" parent="AppTheme">
+        <item name="android:navigationBarColor">@color/bg_default</item>
     </style>
 
     <!-- Launch screen -->
