--- a/app/src/main/res/layout/controller_location.xml
+++ b/app/src/main/res/layout/controller_location.xml
@@ -81,7 +81,7 @@
                 android:gravity="center_vertical">
             </TextView>
             <TextView
-                android:id="@+id/gps_accuracy"
+                android:id="@+id/place_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical">
