--- a/app/src/main/res/layout/item_custom_incoming_location_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_location_message.xml
@@ -3,8 +3,10 @@
   ~
   ~ @author Mario Danic
   ~ @author Marcel Hibbe
-  ~ Copyright (C) 2017-2018 Mario Danic <mario@lovelyhq.com>
+  ~ @author Andy Scherzinger
+  ~ Copyright (C) 2021 Andy Scherzinger <info@andy-scherzinger.de>
   ~ Copyright (C) 2021 Marcel Hibbe <dev@mhibbe.de>
+  ~ Copyright (C) 2017-2018 Mario Danic <mario@lovelyhq.com>
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -49,13 +51,15 @@
             app:flexWrap="wrap"
             app:justifyContent="flex_end">
 
-                <include layout="@layout/item_message_quote" android:visibility="gone"/>
+                <include
+                    android:id="@+id/message_quote"
+                    layout="@layout/item_message_quote"
+                    android:visibility="gone" />
 
                 <WebView
                     android:id="@+id/webview"
                     android:layout_width="400dp"
-                    android:layout_height="200dp"
-                    />
+                    android:layout_height="200dp" />
 
                 <androidx.emoji.widget.EmojiTextView
                     android:id="@+id/messageAuthor"
