--- a/app/src/main/res/drawable/ic_baseline_pause_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_pause_24.xml
@@ -6,5 +6,5 @@
     android:tint="?attr/colorControlNormal">
   <path
       android:fillColor="@color/fontAppbar"
-      android:pathData="M8,5v14l11,-7z"/>
+      android:pathData="M6,19h4L10,5L6,5v14zM14,5v14h4L18,5h-4z"/>
 </vector>
