--- a/app/src/main/res/layout/item_custom_outcoming_voice_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_voice_message.xml
@@ -46,26 +46,42 @@
             layout="@layout/item_message_quote"
             android:visibility="gone" />
 
-        <ImageButton
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_play_arrow_24">
-        </ImageButton>
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
 
-        <SeekBar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </SeekBar>
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
 
-        <androidx.emoji.widget.EmojiTextView
-            android:id="@id/messageText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignWithParentIfMissing="true"
-            android:lineSpacingMultiplier="1.2"
-            android:textColorHighlight="@color/nc_grey"
-            android:textIsSelectable="true"
-            tools:text="Talk to ayou later!" />
+            <ImageButton
+                android:id="@+id/playBtn"
+                android:layout_width="44dp"
+                android:layout_height="44dp"
+                android:background="@drawable/ic_baseline_play_arrow_24"
+                android:visibility="visible">
+            </ImageButton>
+
+            <ImageButton
+                android:id="@+id/pauseBtn"
+                android:layout_width="44dp"
+                android:layout_height="44dp"
+                android:background="@drawable/ic_baseline_pause_24"
+                android:visibility="gone">
+            </ImageButton>
+
+            <SeekBar
+                android:id="@+id/seekbar"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content">
+            </SeekBar>
+
+        </LinearLayout>
 
         <TextView
             android:id="@id/messageTime"
