seekbar styling for voice messages
Signed-off-by: Marcel Hibbe <dev@mhibbe.de>

--- a/app/src/main/res/drawable/ic_baseline_play_arrow_voice_message_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_play_arrow_voice_message_24.xml
@@ -2,9 +2,8 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:viewportHeight="24">
   <path
-      android:fillColor="@color/fontAppbar"
+      android:fillColor="@color/nc_voice_message_outgoing_controls"
       android:pathData="M8,5v14l11,-7z"/>
 </vector>
