--- a/app/src/main/res/layout/item_custom_outcoming_voice_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_voice_message.xml
@@ -57,13 +57,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:progressTint="@color/fontAppbar"
                 android:visibility="gone"/>
 
             <ImageButton
                 android:id="@+id/playBtn"
                 android:layout_width="44dp"
                 android:layout_height="44dp"
-                android:background="@drawable/ic_baseline_play_arrow_24"
+                android:background="@drawable/ic_baseline_play_arrow_voice_message_24"
                 android:visibility="visible">
             </ImageButton>
 
@@ -71,14 +72,17 @@
                 android:id="@+id/pauseBtn"
                 android:layout_width="44dp"
                 android:layout_height="44dp"
-                android:background="@drawable/ic_baseline_pause_24"
+                android:background="@drawable/ic_baseline_pause_voice_message_24"
                 android:visibility="gone">
             </ImageButton>
 
             <SeekBar
                 android:id="@+id/seekbar"
                 android:layout_width="200dp"
-                android:layout_height="wrap_content">
+                android:layout_height="40dp"
+                android:progressDrawable="@drawable/voice_message_outgoing_seek_bar_ruler"
+                android:thumb="@drawable/voice_message_outgoing_seek_bar_slider"
+                tools:progress="50">
             </SeekBar>
 
         </LinearLayout>
