--- a/app/src/main/res/layout/item_custom_outcoming_voice_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_voice_message.xml
@@ -65,7 +65,8 @@
                 android:layout_width="44dp"
                 android:layout_height="44dp"
                 android:background="@drawable/ic_baseline_play_arrow_voice_message_24"
-                android:visibility="visible">
+                android:visibility="visible"
+                android:contentDescription="@string/play_voice_message">
             </ImageButton>
 
             <ImageButton
@@ -73,7 +74,8 @@
                 android:layout_width="44dp"
                 android:layout_height="44dp"
                 android:background="@drawable/ic_baseline_pause_voice_message_24"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:contentDescription="@string/pause_voice_message">
             </ImageButton>
 
             <SeekBar
