add voice messages
Signed-off-by: Marcel Hibbe <dev@mhibbe.de>

--- a/app/src/main/res/layout/controller_chat.xml
+++ b/app/src/main/res/layout/controller_chat.xml
@@ -76,18 +76,19 @@
         android:layout_alignParentBottom="true"
         android:inputType="textLongMessage|textAutoComplete"
         android:maxLength="1000"
-        app:attachmentButtonDefaultBgColor="@color/colorPrimary"
-        app:attachmentButtonDefaultIconColor="@color/white"
-        app:attachmentButtonHeight="36dp"
-        app:attachmentButtonWidth="36dp"
+        app:showAttachmentButton="true"
+        app:attachmentButtonHeight="28dp"
+        app:attachmentButtonWidth="28dp"
+        app:attachmentButtonIcon="@drawable/ic_baseline_attach_file_24"
+        app:attachmentButtonBackground="@color/transparent"
         app:inputButtonDefaultBgColor="@color/colorPrimary"
-        app:inputButtonHeight="36dp"
+        app:inputButtonHeight="35dp"
         app:inputButtonMargin="8dp"
         app:inputButtonWidth="36dp"
         app:inputHint="@string/nc_hint_enter_a_message"
         app:inputTextColor="@color/nc_incoming_text_default"
         app:inputTextSize="16sp"
-        app:showAttachmentButton="true" />
+        app:delayTypingStatus="200"/>
 
     <com.stfalcon.chatkit.messages.MessagesList
         android:id="@+id/messagesListView"
