--- a/app/src/main/res/layout/view_message_input.xml
+++ b/app/src/main/res/layout/view_message_input.xml
@@ -20,15 +20,42 @@
 
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <RelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
         <include layout="@layout/item_message_quote"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
             android:visibility="gone"/>
+
+        <ImageButton
+            android:id="@id/attachmentButton"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_below="@id/quotedChatMessageView"
+            android:scaleType="centerCrop"
+            android:layout_marginTop="5dp"
+            android:contentDescription="@string/nc_add_attachment" />
+
+        <ImageButton
+            android:id="@+id/smileyButton"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_below="@id/quotedChatMessageView"
+            android:layout_toEndOf="@id/attachmentButton"
+            android:background="@color/transparent"
+            android:src="@drawable/ic_insert_emoticon_black_24dp"
+            android:scaleType="centerCrop"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="8dp"
+            app:tint="?attr/colorControlNormal"
+            android:contentDescription="@string/nc_add_emojis" />
 
         <androidx.emoji.widget.EmojiEditText
             android:id="@id/messageInput"
@@ -36,48 +63,100 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/quotedChatMessageView"
             android:layout_centerHorizontal="true"
-            android:layout_toStartOf="@id/sendButtonSpace"
-            android:layout_toEndOf="@id/attachmentButtonSpace"
+            android:layout_toEndOf="@id/smileyButton"
+            android:layout_toStartOf="@id/messageSendButton"
             android:imeOptions="actionDone"
             android:inputType="textAutoCorrect|textMultiLine|textCapSentences"
             android:lineSpacingMultiplier="1.2" />
 
-        <ImageButton
-            android:id="@id/attachmentButton"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+        <TextView
+            android:id="@+id/slideToCancelDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/quotedChatMessageView"
+            android:layout_toStartOf="@id/recordAudioButton"
+            android:layout_toEndOf="@id/audioRecordDuration"
+            android:layout_centerInParent="true"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/low_emphasis_text"
+            android:text="@string/nc_voice_message_slide_to_cancel"
+            android:visibility="gone"
+            tools:visibility="visible">
+        </TextView>
+
+        <ImageView
+            android:id="@+id/microphoneEnabledInfoBackground"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_below="@id/quotedChatMessageView"
             android:scaleType="centerInside"
-            android:contentDescription="@string/nc_add_attachment" />
+            android:layout_alignParentStart="true"
+            android:background="@color/bg_default"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:contentDescription="@null" />
 
-        <ImageButton
-            android:id="@+id/smileyButton"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+        <!-- the height of this ImageView is used to define the overall height of the
+         parent layout whenever the voice recording mode is enabled. parent layout has
+         height=wrap_content because it must enlarge whenever user types a message with
+          linebreaks. -->
+        <ImageView
+            android:id="@+id/microphoneEnabledInfo"
+            android:layout_width="35dp"
+            android:layout_height="43dp"
             android:layout_below="@id/quotedChatMessageView"
-            android:layout_toStartOf="@id/messageSendButton"
-            android:background="@color/transparent"
-            android:src="@drawable/ic_insert_emoticon_black_24dp"
-            app:tint="@color/emoji_icons"
-            android:contentDescription="@string/nc_add_emojis" />
+            android:scaleType="centerInside"
+            android:layout_alignParentStart="true"
+            android:src="@drawable/ic_baseline_mic_red_24"
+            android:contentDescription="@null"
+            android:visibility="gone"
+            tools:visibility="visible"/>
+
+        <Chronometer
+            android:id="@+id/audioRecordDuration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/quotedChatMessageView"
+            android:layout_toEndOf="@id/microphoneEnabledInfo"
+            android:layout_centerVertical="true"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/low_emphasis_text"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:background="@color/bg_default"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <ImageButton
             android:id="@id/messageSendButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_below="@id/quotedChatMessageView"
+            android:layout_alignParentEnd="true"
             android:adjustViewBounds="true"
-            android:padding="4dp"
             android:scaleType="centerInside"
             android:contentDescription="@string/nc_description_send_message_button" />
+
+        <ImageButton
+            android:id="@+id/recordAudioButton"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_below="@id/quotedChatMessageView"
+            android:layout_alignParentEnd="true"
+            android:background="@color/transparent"
+            android:src="@drawable/ic_baseline_mic_24"
+            android:contentDescription="@string/nc_description_record_voice" />
 
         <Space
             android:id="@id/attachmentButtonSpace"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_below="@id/quotedChatMessageView"
-            android:layout_toEndOf="@id/attachmentButton" />
+            android:layout_toEndOf="@id/attachmentButton"
+            android:visibility="gone"/>
 
         <Space
             android:id="@id/sendButtonSpace"
